# QCustomPlot-Manual

./: .gitignore  LICENSE
docs/: README.md  _sidebar.md  index.html
docs/zh-cn/: QCustomPlot之Item的移动和缩放（十二）.md  QCustomPlot之Item（十）.md  QCustomPlot之个性化外观（二）.md  QCustomPlot之参数曲线（七）.md  QCustomPlot之层和布局（四）.md  QCustomPlot之平滑曲线上（八）.md  QCustomPlot之平滑曲线下（九）.md  QCustomPlot之开始（一）.md  QCustomPlot之柱状图（三）.md  QCustomPlot之简单动态图（六）.md  QCustomPlot之轴矩形和轴（五）.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/001_start/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/examples/003_bar_chart_demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/examples/004_layout_demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/examples/005_axisrect_demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/examples/006_dynamic_data_demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/examples/007_lemniscate_demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/examples/008_smooth_graph_demo_01/: CMakeLists.txt  mainwindow.cpp
src/examples/009_smooth_graph_demo_02/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/examples/012_stretch_item_demo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/qcustomplot/: CMakeLists.txt  qcpplot.cpp  qcpplot.h  qcpsizehandle.cpp  qcpsizehandle.h  qcpsizehandlemanager.cpp  qcpsizehandlemanager.h  qcpsmoothcurve.cpp  qcpsmoothcurve.h  qcptextbars.cpp  qcptextbars.h
